--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag gray-test:$(date +%s)
+      run: docker build . --file Dockerfile --tag ghcr.io/recall704/gray-test:$(date +%s)
+
+    - name: Push to GitHub Container Registry
+      run: docker push ghcr.io/${GITHUB_REPOSITORY}:${GITHUB_SHA}
