--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,20 +12,22 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       TZ: Asia/Shanghai
-      REGISTRY: ghcr.io
     steps:
+      # checkout code
       - uses: actions/checkout@v2
-      - name: Login
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.PACKAGES_TOKEN }}
-      - name: Build && Push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+
+      # login to docker hub
+      - name: docker login
+        env:
+          DOCKER_UESR: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
+        run: |
+          docker login -u $DOCKER_UESR -p $DOCKER_PASSWORD
+
+      # build docker image
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+      
+      # push image to hub
+      - name: Docker push
+        run: docker push ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
